# ClashAutoFarm

./: .env.template  .gitignore  README.md  calibrate.py  config.yaml  main.py  pyproject.toml
bot/: actions.py  config_loader.py  dry_run.py  state_machine.py
calibration/: calibrate_threshold.py  debug_locate_text.py  grab.py
tests/: conftest.py  manual_ocr_check.py  test_actions.py  test_config_loader.py  test_dry_run.py  test_notifier.py  test_state_machine.py  test_templates.py
utils/: csv_writer.py  notifier.py
vision/: capture.py  ocr.py  preprocess.py  templates.py
