[project]
name = "clashautofarm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "easyocr",
    "loguru",
    "mss",
    "numpy",
    "opencv-python>=4.13.0.92",
    "pillow",
    "pyautogui",
    "pynput>=1.8.2",
    "pytesseract",
    "pyyaml",
    "tesseract>=0.1.3",
]
